--- a/docs/installation/docker/Dockerfile
+++ b/docs/installation/docker/Dockerfile
@@ -2,14 +2,11 @@ ARG PYTORCH="2.7.1"
 ARG CUDA="11.8"
 ARG CUDNN="9"
 
-FROM pytorch/pytorch:${PYTORCH}-cuda${CUDA}-cudnn${CUDNN}-devel
+FROM pytorch/pytorch:${PYTORCH}-cuda${CUDA}-cudnn${CUDNN}-runtime
 
 ENV TORCH_CUDA_ARCH_LIST="6.0;6.1;7.0+PTX;7.5;8.0;8.6+PTX"
 ENV TORCH_NVCC_FLAGS="-Xfatbin -compress-all"
 ENV CMAKE_PREFIX_PATH="$(dirname $(which conda))/../"
-# The default location for Torch Hub models is ~/.cache/torch/
-# We can specify a different location by uncommenting the line below.
-ENV TORCH_HOME="data/pytorch_models/"
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Update and install OS packages.
@@ -18,7 +15,7 @@ RUN apt-get update && apt-get install -y wget vim git \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root appuser.
-# Obtain your USER_ID from bash command `id -u`.
+# Obtain your USER_ID from the bash command `id -u`.
 ARG USER_ID
 RUN useradd -m --no-log-init --system --uid ${USER_ID} appuser -g sudo
 RUN echo "%sudo ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
@@ -28,11 +25,9 @@ WORKDIR /home/appuser
 
 # Install dependencies and useful packages.
 RUN pip install --no-cache-dir --user --upgrade pip wheel
-
 RUN conda clean -y --all
-RUN pip install --no-cache-dir --user torch-geometric==2.6.1 lightning==2.5.4 ogb==1.3.6
 
-# Clone the project and install.
-RUN git clone https://github.com/vuptran/node-classification.git
+# Add the project and install.
+COPY --chown=appuser:appuser . node-classification/
 WORKDIR /home/appuser/node-classification
 RUN pip install --no-cache-dir --user -e .
